@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-23T08:21:40Z",
+  "timestamp" : "2022-11-23T16:24:00Z",
   "count_outdated" : 2613,
   "uniques_outdated" : 704,
-  "count" : 2647,
+  "count" : 2648,
   "uniques" : 721,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-11-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
