@@ -1,3 +1,11 @@
+2022-11-23T16:24:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3533852592 # 1055
+* notice: last 14d: unq all: 7 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 704 2613 / 721 2647
+* notice: next accum: outdated-unq outdated-all / unq all: 704 2613 / 721 2648
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-23]
+
 2022-11-23T08:21:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3530345347 # 1054
 * notice: last 14d: unq all: 7 34
